first working sunburst chart
finally got it to work

--- a/react-chart-app/src/App.css
+++ b/react-chart-app/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+#ac-chart-container {
+  height: 600px;
+}
+
+.sunburst-viz text .text-contour {
+  stroke-width: 0;
+}
+
+
+.main-title {
+  padding-top: 1em;
+  text-align: center;
+}
